--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Applied Designer</title>
         <meta name="robots" content="noindex">
+        <link rel="stylesheet" href="https://use.typekit.net/lni3yyu.css">
         <style>
             .content {
                 font-size: 1.5rem;
                 font-weight: 500;
                 color: #000000;
-                font-family: "Helvetica", sans-serif;
+                font-family: "tt-commons-pro", "Helvetica", sans-serif;
                 font-style: normal;
                 line-height: 1.5;
                 letter-spacing: 0em;
