--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
         <br>
         <p>Coming soon, early 2025.</p>
         <p>Until then, follow <a href="https://instagram.com/applieddesigner" target=_blank>@applieddesigner on Instagram.</a></p>
+        <br>
+        <p><a href="https://yuss.applieddesigner.com/" target=_blank>YUSS Studio is available here</a></p>
     </body>
 
 </html>
